# hpc_io_scheduler

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  permissive.yaml  strict.yaml
scripts/: auto_tune.py  backtest.py  distill_llm.py  rolling_backtest.py  serve.py  train.py
src/hpc_io_scheduler/: __init__.py  backtest.py  config.py  pipeline.py
src/hpc_io_scheduler/data/: __init__.py  loader.py  splits.py  windowing.py
src/hpc_io_scheduler/evaluation/: __init__.py  ablations.py  audit.py  baselines.py  metrics.py  model_quality.py  shap_explain.py  simulator.py
src/hpc_io_scheduler/guardrail/: __init__.py  kalman.py  policy.py  thresholds.py
src/hpc_io_scheduler/mlops/: __init__.py  monitor.py
src/hpc_io_scheduler/models/: __init__.py  conformal.py  congestion.py  dlinear.py  lora_advisor.py  nbeats.py  xgb_delta.py
tests/: conftest.py  test_conformal.py  test_guardrail.py  test_kalman.py  test_llm_advisor.py  test_model_quality.py  test_nbeats.py  test_pipeline_smoke.py  test_simulator.py  test_splits.py  test_xgb_delta.py
