[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-io-scheduler"
version = "0.1.0"
description = "FIAC: Forecast-Informed Adaptive Control for HPC I/O scheduling (MIT Supercloud)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.3",
    "xgboost>=2.0",
    "joblib>=1.3",
    "pyyaml>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
advisor = ["transformers>=4.40", "peft>=0.10", "bitsandbytes>=0.43", "accelerate>=0.29"]
gguf = ["llama-cpp-python>=0.2.90"]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "shap>=0.45"]

[project.scripts]
hpc-train = "hpc_io_scheduler.pipeline:main_train"
hpc-backtest = "hpc_io_scheduler.pipeline:main_backtest"
hpc-serve = "hpc_io_scheduler.pipeline:main_serve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
